feat(app): add note

--- a/src/assets/translation/cs.json
+++ b/src/assets/translation/cs.json
@@ -1,5 +1,6 @@
 {
   "headline": "Tady mas svoje poznamky heh...",
   "noteTitle": "Dej sem co chces",
-  "noteDescription": "Kdyz myslis..."
+  "noteDescription": "Kdyz myslis...",
+  "add": "Toz pridej"
 }
