--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -1,5 +1,6 @@
 {
   "headline": "Here are your precious notes",
   "noteTitle": "Whatever",
-  "noteDescription": "Just do it!!!"
+  "noteDescription": "Just do it!!!",
+  "add": "Add"
 }
